objects/Account_Relationship__c.object
<CustomObject>
    <description>VOLO - Account Relations object to store account associations and affiliations</description>
    <fields>
        <fullName>Associated_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Account__c</fullName>
        <description>Main Account - KLIV News station in one example</description>
        <label>Main Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CALA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>MESA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>Relation Type</description>
        <inlineHelpText>Please select a relation type</inlineHelpText>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliation</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Internally separate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owned and Operated</fullName>
                </value>
                <value>
                    <fullName>Ownership Group</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Regional Location</fullName>
                </value>
                <value>
                    <fullName>Reseller/Dealer to Customer</fullName>
                </value>
                <value>
                    <fullName>Sales Agent (Association)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>ACCREL-{000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>